Atualizações na lógica do timestamp

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,13 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+
 lib_deps =
     ArduinoJson
     knolleary/PubSubClient
+
+board_build.filesystem = littlefs
+board_build.partitions = res/partition.csv
+
+upload_protocol = esptool
+
