--- a/platformio.ini
+++ b/platformio.ini
@@ -7,6 +7,7 @@ monitor_speed = 115200
 lib_deps =
     ArduinoJson
     knolleary/PubSubClient
+    NTPClient
 
 board_build.filesystem = littlefs
 board_build.partitions = res/partition.csv
