Atualizações de certificados

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@ lib_deps =
     ArduinoJson
     knolleary/PubSubClient
     NTPClient
+    ESPping
 
 board_build.filesystem = littlefs
 board_build.partitions = res/partition.csv
